--- a/WebContent/WEB-INF/css/style.css
+++ b/WebContent/WEB-INF/css/style.css
@@ -1,56 +1,140 @@
 @charset "UTF-8";
 
 #mainTable {
-    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
-    border-collapse: collapse;
-    width: 100%;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	border-collapse: collapse;
+	width: 100%;
 }
 
 #mainTable td, #mainTable th {
 	text-align: center;
-    border: 1px solid #ddd;
-    padding: 8px;
+	border: 1px solid #ddd;
+	padding: 8px;
 }
 
-#mainTable tr:nth-child(even){background-color: #f2f2f2;}
+#mainTable tr:nth-child(even) {
+	background-color: #f2f2f2;
+}
 
-#mainTable tr:hover {background-color: #ddd;}
+#mainTable tr:hover {
+	background-color: #ddd;
+}
 
 #mainTable th {
-    padding-top: 12px;
-    padding-bottom: 12px;
-    text-align: center;
-    background-color: #4CAF50;
-    color: white;
+	padding-top: 12px;
+	padding-bottom: 12px;
+	text-align: center;
+	background-color: #4CAF50;
+	color: white;
 }
+
 .button {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 20x;
-    margin: 4px 2px;
-    cursor: pointer;
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 15px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 20x;
+	margin: 4px 2px;
+	cursor: pointer;
 }
 
 div {
-    width: 70%;
-        margin-left: auto;
-    margin-right: auto;
+	width: 70%;
+	margin-left: auto;
+	margin-right: auto;
 }
 
 a {
-    background-color: #4CAF50; /* Green */
-    border: none;
-    color: white;
-    padding: 8px 15px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 14px;
-    margin: 2px 1px;
-    cursor: pointer;
+	background-color: #4CAF50; /* Green */
+	border: none;
+	color: white;
+	padding: 8px 15px;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	margin: 2px 1px;
+	cursor: pointer;
+	display: inline-block;
+}
+
+.topnav {
+	width: 70%;
+	font-size: 17px;
+	text-align: center;
+}
+
+.footer a {
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.index a {
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.index a:hover {
+	font-size: 20px;
+}
+
+.footer a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.footer a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav a {
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+}
+
+.topnav a:hover {
+	background-color: #ddd;
+	color: black;
+}
+
+.topnav .icon {
+	display: none;
+}
+
+@media screen and (max-width: 600px) {
+	.topnav a {
+		display: none;
+	}
+	.topnav a.icon {
+		float: center;
+		display: block;
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.topnav.responsive {
+		position: relative;
+	}
+	.topnav.responsive .icon {
+		position: absolute;
+		right: 0;
+		top: 0;
+	}
+	.topnav.responsive a {
+		float: none;
+		display: block;
+		text-align: left;
+	}
 }
