--- a/WebContent/WEB-INF/fragments/footer.jspf
+++ b/WebContent/WEB-INF/fragments/footer.jspf
@@ -1,3 +1,3 @@
 <div class="footer" align="center">
-<a href="/Workshop3">Powrót do indexu</a>
+<a href="indexLogged.jsp">Powrót do indexu</a>
 </div>
